--- a/assets/package.json
+++ b/assets/package.json
@@ -7,7 +7,10 @@
     "watch": "webpack --mode development --watch"
   },
   "dependencies": {
-    "phoenix": "file:../deps/phoenix"
+    "phoenix": "file:../deps/phoenix",
+    "react": "^16.13.1",
+    "react-dom": "npm:@hot-loader/react-dom",
+    "react-hot-loader": "^4.12.21"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
@@ -15,8 +18,8 @@
     "babel-loader": "^8.0.0",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.2",
-    "sass-loader": "^8.0.2",
-    "node-sass": "^4.13.1",
+    "eslint": "^7.4.0",
+    "eslint-plugin-react": "^7.20.3",
     "mini-css-extract-plugin": "^0.9.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "terser-webpack-plugin": "^2.3.2",
