--- a/.gitignore
+++ b/.gitignore
@@ -33,4 +33,9 @@ npm-debug.log
 # this depending on your deployment strategy.
 /priv/static/
 
+# Cache files
 .eslintcache
+.stylelintcache
+
+# yarn/npm
+yarn-error.log
