--- a/assets/package.json
+++ b/assets/package.json
@@ -4,18 +4,23 @@
   "license": "MIT",
   "scripts": {
     "deploy": "webpack --mode production",
-    "watch": "webpack --mode development --watch"
+    "watch": "webpack-dev-server --mode development",
+    "lint:css": "stylelint js/"
   },
   "dependencies": {
+    "html-webpack-plugin": "^4.3.0",
     "phoenix": "file:../deps/phoenix",
     "react": "^16.13.1",
     "react-dom": "npm:@hot-loader/react-dom",
-    "react-hot-loader": "^4.12.21"
+    "react-hot-loader": "^4.12.21",
+    "styled-components": "^5.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.10.4",
     "babel-loader": "^8.0.0",
+    "babel-plugin-styled-components": "^1.10.7",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.2",
     "eslint": "^7.4.0",
@@ -26,9 +31,15 @@
     "mini-css-extract-plugin": "^0.9.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "prettier": "^2.0.5",
+    "stylelint": "^13.6.1",
+    "stylelint-config-recommended": "^3.0.0",
+    "stylelint-config-styled-components": "^0.1.1",
+    "stylelint-processor-styled-components": "^1.10.0",
+    "stylus-loader": "^3.0.2",
     "terser-webpack-plugin": "^2.3.2",
     "webpack": "4.41.5",
-    "webpack-cli": "^3.3.2"
+    "webpack-cli": "^3.3.2",
+    "webpack-dev-server": "^3.11.0"
   },
   "husky": {
     "hooks": {
@@ -36,7 +47,13 @@
     }
   },
   "lint-staged": {
-    "*.js": "eslint --cache --fix",
+    "*.js": [
+      "eslint --cache --fix",
+      "stylelint --cache"
+    ],
     "*.{js,css,md}": "prettier --write"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   }
 }
