--- a/assets/package.json
+++ b/assets/package.json
@@ -13,6 +13,8 @@
     "react": "^16.13.1",
     "react-dom": "npm:@hot-loader/react-dom",
     "react-hot-loader": "^4.12.21",
+    "react-is": "^16.13.1",
+    "reset.css": "^2.0.2",
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
@@ -22,7 +24,7 @@
     "babel-loader": "^8.0.0",
     "babel-plugin-styled-components": "^1.10.7",
     "copy-webpack-plugin": "^5.1.1",
-    "css-loader": "^3.4.2",
+    "css-loader": "^3.6.0",
     "eslint": "^7.4.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-react": "^7.20.3",
@@ -35,7 +37,6 @@
     "stylelint-config-recommended": "^3.0.0",
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-processor-styled-components": "^1.10.0",
-    "stylus-loader": "^3.0.2",
     "terser-webpack-plugin": "^2.3.2",
     "webpack": "4.41.5",
     "webpack-cli": "^3.3.2",
