--- a/assets/package.json
+++ b/assets/package.json
@@ -14,6 +14,8 @@
     "react-dom": "npm:@hot-loader/react-dom",
     "react-hot-loader": "^4.12.21",
     "react-is": "^16.13.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "reset.css": "^2.0.2",
     "styled-components": "^5.1.1"
   },
