--- a/assets/package.json
+++ b/assets/package.json
@@ -8,14 +8,18 @@
     "lint:css": "stylelint js/"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.4.0",
     "html-webpack-plugin": "^4.3.0",
     "phoenix": "file:../deps/phoenix",
     "react": "^16.13.1",
     "react-dom": "npm:@hot-loader/react-dom",
     "react-hot-loader": "^4.12.21",
     "react-is": "^16.13.1",
+    "react-redux": "^7.2.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
     "reset.css": "^2.0.2",
     "styled-components": "^5.1.1"
   },
