--- a/assets/package.json
+++ b/assets/package.json
@@ -21,12 +21,14 @@
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "reset.css": "^2.0.2",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.1.1",
+    "styled-theming": "^2.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.10.4",
+    "@svgr/webpack": "^5.4.0",
     "babel-loader": "^8.0.0",
     "babel-plugin-styled-components": "^1.10.7",
     "copy-webpack-plugin": "^5.1.1",
@@ -34,6 +36,7 @@
     "eslint": "^7.4.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-react": "^7.20.3",
+    "file-loader": "^6.0.0",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.11",
     "mini-css-extract-plugin": "^0.9.0",
@@ -44,6 +47,7 @@
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-processor-styled-components": "^1.10.0",
     "terser-webpack-plugin": "^2.3.2",
+    "url-loader": "^4.1.0",
     "webpack": "4.41.5",
     "webpack-cli": "^3.3.2",
     "webpack-dev-server": "^3.11.0"
