Skeleton UI and example preview cards

--- a/assets/package.json
+++ b/assets/package.json
@@ -15,6 +15,7 @@
     "react-dom": "npm:@hot-loader/react-dom",
     "react-hot-loader": "^4.12.21",
     "react-is": "^16.13.1",
+    "react-loading-skeleton": "^2.1.1",
     "react-redux": "^7.2.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
