--- a/assets/package.json
+++ b/assets/package.json
@@ -33,6 +33,7 @@
     "@svgr/webpack": "^5.4.0",
     "babel-loader": "^8.0.0",
     "babel-plugin-styled-components": "^1.10.7",
+    "case-sensitive-paths-webpack-plugin": "^2.3.0",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.6.0",
     "eslint": "^7.4.0",
