--- a/assets/package.json
+++ b/assets/package.json
@@ -20,6 +20,7 @@
     "react-redux": "^7.2.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
+    "react-spring": "^8.0.27",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "reset.css": "^2.0.2",
