--- a/assets/.stylelintrc
+++ b/assets/.stylelintrc
@@ -7,6 +7,6 @@
     "stylelint-config-styled-components"
   ],
   "rules": {
-    "selector-type-no-unknown": false,
+    "selector-type-no-unknown": null,
   }
 }
