--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,8 @@ services:
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_DB=game_journal_dev
     restart: always
+    ports:
+      - 5432:5432
 
 volumes:
   postgres:
