--- a/web/package.json
+++ b/web/package.json
@@ -4,16 +4,18 @@
   "license": "CC-BY-SA-4.0",
   "scripts": {
     "deploy": "webpack --mode production",
-    "watch": "webpack-dev-server --mode development",
+    "watch": "cross-env NODE_ENV=development babel-node dev.js --mode development",
     "lint:css": "stylelint js/"
   },
   "dependencies": {
+    "@loadable/component": "^5.13.1",
+    "@loadable/server": "^5.13.1",
     "@reduxjs/toolkit": "^1.4.0",
-    "html-webpack-plugin": "^4.3.0",
+    "cross-env": "^7.0.2",
+    "koa": "^2.13.0",
     "react": "^16.13.1",
-    "react-dom": "npm:@hot-loader/react-dom",
+    "react-dom": "^16.13.1",
     "react-feather": "^2.0.8",
-    "react-hot-loader": "^4.12.21",
     "react-is": "^16.13.1",
     "react-loading-skeleton": "^2.1.1",
     "react-redux": "^7.2.0",
@@ -22,13 +24,20 @@
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "reset.css": "^2.0.2",
+    "source-map-support": "^0.5.19",
     "styled-components": "^5.1.1",
-    "styled-theming": "^2.2.0"
+    "styled-theming": "^2.2.0",
+    "yargs": "^15.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
+    "@babel/node": "^7.10.4",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.10.4",
+    "@loadable/babel-plugin": "^5.13.0",
+    "@loadable/webpack-plugin": "^5.13.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.3.3",
     "@svgr/webpack": "^5.4.0",
     "babel-loader": "^8.0.0",
     "babel-plugin-styled-components": "^1.10.7",
@@ -38,12 +47,16 @@
     "eslint": "^7.4.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-react": "^7.20.3",
+    "express-to-koa": "^2.0.0",
     "file-loader": "^6.0.0",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.11",
     "mini-css-extract-plugin": "^0.9.0",
+    "nodemon": "^2.0.4",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "prettier": "^2.0.5",
+    "react-refresh": "^0.8.3",
+    "require-from-string": "^2.0.2",
     "stylelint": "^13.6.1",
     "stylelint-config-recommended": "^3.0.0",
     "stylelint-config-styled-components": "^0.1.1",
@@ -52,7 +65,11 @@
     "url-loader": "^4.1.0",
     "webpack": "4.41.5",
     "webpack-cli": "^3.3.2",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dashboard": "^3.2.0",
+    "webpack-dev-middleware": "^3.7.2",
+    "webpack-dev-server": "^3.11.0",
+    "webpack-hot-middleware": "^2.25.0",
+    "webpack-node-externals": "^2.3.0"
   },
   "husky": {
     "hooks": {
