--- a/web/package.json
+++ b/web/package.json
@@ -3,8 +3,8 @@
   "description": " ",
   "license": "CC-BY-SA-4.0",
   "scripts": {
-    "deploy": "webpack --mode production",
-    "watch": "cross-env NODE_ENV=development babel-node dev.js --mode development",
+    "deploy": "cross-env NODE_ENV=production webpack --mode production",
+    "watch": "cross-env NODE_ENV=development webpack-dashboard --port 3001 -- nodemon server.js --mode development",
     "lint:css": "stylelint js/"
   },
   "dependencies": {
@@ -42,6 +42,7 @@
     "babel-loader": "^8.0.0",
     "babel-plugin-styled-components": "^1.10.7",
     "case-sensitive-paths-webpack-plugin": "^2.3.0",
+    "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.6.0",
     "eslint": "^7.4.0",
