Setup production build and dockerfile for SSR app
* Move server file into server/ directory, add babel transpile script
* New node Dockerfile to build and run assets
* Conditionally use webpack in server/index.js, falling back to static
  assets when not needed
* Remove vendor prefixes from styled-components/stylis output
* Add node version to engines in package.json

--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@ game_journal-*.tar
 # this depending on your deployment strategy.
 /api/priv/static/
 /web/dist/
+/web/lib/
 
 # Cache files
 .eslintcache
