--- a/web/package.json
+++ b/web/package.json
@@ -3,8 +3,10 @@
   "description": " ",
   "license": "CC-BY-SA-4.0",
   "scripts": {
-    "deploy": "cross-env NODE_ENV=production webpack --mode production",
-    "watch": "cross-env NODE_ENV=development webpack-dashboard --port 3001 -- nodemon server.js --mode development",
+    "build:webpack": "cross-env NODE_ENV=production webpack --mode production",
+    "build:server": "cross-env NODE_ENV=production babel -d lib/ server/",
+    "build": "yarn build:webpack && yarn build:server",
+    "start": "cross-env NODE_ENV=development nodemon server/index.js --mode development",
     "lint:css": "stylelint js/"
   },
   "dependencies": {
@@ -12,7 +14,11 @@
     "@loadable/server": "^5.13.1",
     "@reduxjs/toolkit": "^1.4.0",
     "cross-env": "^7.0.2",
+    "express-to-koa": "^2.0.0",
     "koa": "^2.13.0",
+    "koa-logger": "^3.2.1",
+    "koa-mount": "^4.0.0",
+    "koa-static": "^5.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-feather": "^2.0.8",
@@ -30,6 +36,7 @@
     "yargs": "^15.4.1"
   },
   "devDependencies": {
+    "@babel/cli": "^7.10.4",
     "@babel/core": "^7.0.0",
     "@babel/node": "^7.10.4",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
@@ -40,6 +47,7 @@
     "@pmmmwh/react-refresh-webpack-plugin": "^0.3.3",
     "@svgr/webpack": "^5.4.0",
     "babel-loader": "^8.0.0",
+    "babel-plugin-root-import": "^6.5.0",
     "babel-plugin-styled-components": "^1.10.7",
     "case-sensitive-paths-webpack-plugin": "^2.3.0",
     "clean-webpack-plugin": "^3.0.0",
@@ -48,13 +56,12 @@
     "eslint": "^7.4.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-react": "^7.20.3",
-    "express-to-koa": "^2.0.0",
     "file-loader": "^6.0.0",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.11",
     "mini-css-extract-plugin": "^0.9.0",
     "nodemon": "^2.0.4",
-    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "prettier": "^2.0.5",
     "react-refresh": "^0.8.3",
     "require-from-string": "^2.0.2",
@@ -62,7 +69,7 @@
     "stylelint-config-recommended": "^3.0.0",
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-processor-styled-components": "^1.10.0",
-    "terser-webpack-plugin": "^2.3.2",
+    "terser-webpack-plugin": "^3.0.6",
     "url-loader": "^4.1.0",
     "webpack": "4.41.5",
     "webpack-cli": "^3.3.2",
@@ -71,6 +78,9 @@
     "webpack-dev-server": "^3.11.0",
     "webpack-hot-middleware": "^2.25.0",
     "webpack-node-externals": "^2.3.0"
+  },
+  "engines": {
+    "node": "^14.5.0"
   },
   "husky": {
     "hooks": {
