Clean up API (remove all frontend references) and fix dockerfile for phoenix only build

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,28 +1,20 @@
 FROM bitwalker/alpine-elixir-phoenix:1.10.3 as dev
 RUN apk add --no-cache make gcc libc-dev
-RUN npm i -g yarn
 ENV MIX_ENV=prod
 
 # Dependencies
-WORKDIR /app/api
-COPY ./api/mix.exs ./api/mix.lock ./
+WORKDIR /app
+COPY ./mix.exs ./mix.lock ./
 RUN mix deps.get
 RUN mix deps.compile
 
-# Backend Compilation
-COPY /api/ ./
+# Compilation
+COPY config/ ./config
+COPY lib/ ./lib
+COPY priv/ ./priv
 RUN mix compile
 
-# Frontend Assets Build
-WORKDIR /app/web/
-COPY ./web/package.json ./web/yarn.lock ./
-RUN yarn --frozen-lockfile
-COPY ./web ./
-ENV NODE_ENV=production
-RUN yarn deploy
-
 # Release build
-WORKDIR /app/api/
 RUN mix phx.digest
 RUN mix release
 
@@ -36,8 +28,8 @@ RUN wget -q "https://raw.githubusercontent.com/vishnubob/wait-for-it/master/wait
 RUN chmod +x ./wait-for-it.sh
 
 WORKDIR /opt/app
-COPY --from=dev --chown=default:root /app/api/_build .
-COPY ./api/run.sh ./
+COPY --from=dev --chown=default:root /app/_build .
+COPY ./run.sh ./
 RUN chmod +x ./run.sh
 
 # Ensure we don't run in an elevated context
@@ -45,4 +37,4 @@ USER default
 
 # Run the Phoenix app
 EXPOSE 4000
-ENTRYPOINT [ "/opt/app/run.sh" ]
+CMD [ "/bin/sh", "-c", "/opt/app/run.sh" ]
