--- a/web/package.json
+++ b/web/package.json
@@ -13,11 +13,17 @@
     "@loadable/component": "^5.13.1",
     "@loadable/server": "^5.13.1",
     "@reduxjs/toolkit": "^1.4.0",
+    "@urql/exchange-graphcache": "^3.0.1",
     "cross-env": "^7.0.2",
+    "dotenv": "^8.2.0",
     "express-to-koa": "^2.0.0",
+    "graphql": "^15.3.0",
+    "graphql-tag": "^2.10.4",
+    "isomorphic-fetch": "^2.2.1",
     "koa": "^2.13.0",
     "koa-logger": "^3.2.1",
     "koa-mount": "^4.0.0",
+    "koa-proxy": "^1.0.0-alpha.3",
     "koa-static": "^5.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -27,12 +33,14 @@
     "react-redux": "^7.2.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
+    "react-ssr-prepass": "^1.2.1",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "reset.css": "^2.0.2",
     "source-map-support": "^0.5.19",
     "styled-components": "^5.1.1",
     "styled-theming": "^2.2.0",
+    "urql": "^1.9.8",
     "yargs": "^15.4.1"
   },
   "devDependencies": {
